--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,11 @@
 
 // For example:
 $red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
+$blue: #2176FF;
+$yellow: #FDCA40;
+$orange: #F79824;
 $green: #1EDD88;
-$gray: #0E0000;
+$gray: #31393C;
+$white: #FDFBF8;
 $light-gray: #F4F4F4;
+$light-blue: #5C9AFF;
