'New Alibye' feature added and sign in+sign out added

--- a/app/views/alibyes/new.html.erb
+++ b/app/views/alibyes/new.html.erb
@@ -1,1 +1,7 @@
-hello
+<%= simple_form_for(@alibye) do |f| %>
+  <%= f.input :title, placeholder:'test' %>
+  <%= f.input :category, :collection => Alibye::CATEGORIES %>
+  <%= f.input :description %>
+  <%= f.input :price_per_hour %>
+  <%= f.submit %>
+<% end %>
