Corrected seeds file and index view

--- a/app/views/alibyes/index.html.erb
+++ b/app/views/alibyes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>My Alibye</h1>
+<h2>Alibyes List</h2>
     <ul class="list-group">
       <% @alibyes.each do |alibye| %>
     <li class="list-group-item"><%= link_to alibye.title, alibye_path(alibye)%></li>
