--- a/app/views/alibyes/new.html.erb
+++ b/app/views/alibyes/new.html.erb
@@ -1,7 +1,11 @@
-<%= simple_form_for(@alibye) do |f| %>
-  <%= f.input :title, placeholder:'test' %>
-  <%= f.input :category, :collection => Alibye::CATEGORIES %>
-  <%= f.input :description %>
-  <%= f.input :price_per_hour %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <%= simple_form_for(@alibye) do |f| %>
+    <%= f.input :title, placeholder:'test' %>
+    <%= f.input :category, :collection => Alibye::CATEGORIES %>
+    <%= f.input :description %>
+    <%= f.input :price_per_hour %>
+    <%= f.submit "Add Alibye", :class => "btn btn-blue" %>
+  <% end %>
+  <br>
+  <%= link_to "Back to list", alibyes_path , class: "btn btn-orange" %>
+</div>
