--- a/app/views/alibyes/show.html.erb
+++ b/app/views/alibyes/show.html.erb
@@ -1,14 +1,13 @@
 <div class="container">
   <% if @alibye.blank? %>
-  <p>There are no alibyes available.</p>
+    <p>There are no alibyes available.</p>
   <% else %>
-  <p>ALL THE ALIBYES</p>
-
-  <p><%= @alibye.title %></p>
-  <p><%= @alibye.category %></p>
-  <p><%= @alibye.description %></p>
-  <p><%= @alibye.price_per_hour %></p>
-
+    <h4><%= @alibye.title %></h4>
+    <p><%= @alibye.category %></p>
+    <p><%= @alibye.description %></p>
+    <p><%= @alibye.price_per_hour %></p>
   <% end %>
-  <%= link_to "Back to list", alibyes_path, class: "btn btn-orange" %>
+  <%= link_to "Back to list", alibyes_path, class: "btn btn-transparent" %>
+  <%= link_to "Edit", edit_alibye_path, class: "btn btn-blue" %>
+  <%= link_to "Delete", alibye_path(@alibye), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-orange" %>
 </div>
