cards components init

--- a/app/views/alibyes/index.html.erb
+++ b/app/views/alibyes/index.html.erb
@@ -1,12 +1,13 @@
 <div class="container">
   <h2>Alibyes List</h2>
-  <ul class="list-group">
+  <%# <ul class="list-group">
     <% @alibyes.each do |alibye| %>
-      <li class="list-group-item">
+      <%# <li class="list-group-item">
         <%= link_to alibye.title, alibye_path(alibye), class: "btn btn-blue" %>
-      </li>
+      <%# </li>
     <% end %>
-  </ul>
+  <%# </ul> %>
+  <%= render partial: "/shared/cards" %>
   <br>
   <%= link_to "Create a new Alibye", new_alibye_path, class: "btn btn-blue" %>
 </div>
