Styling improvement on home and navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,5 +13,17 @@
 
 .fa-solid {
   font-size: 40px;
-  color: $gray;
+  color: $blue;
+}
+
+#logo {
+  size: 20px;
+}
+
+#logo-text {
+  font-size: 30px;
+}
+
+.link {
+  text-decoration: none;
 }
