--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,11 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon py-4 px-5">
   <div class="container-fluid">
-    <%= link_to root_path, class: "" do %>
-      <i class="fa-solid fa-user-secret "></i>
+    <%= link_to root_path, class:"link" do %>
+      <div class="d-flex justify-content-start align-items-center">
+        <div id="logo"><i class="fa-solid fa-user-secret "></i></div>
+        <div id="logo-text", class="mx-3">ALIBYE</div>
+      </div>
     <% end %>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,7 +29,9 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <%= link_to new_user_session_path, class: "nav-link btn btn-blue" do %>
+              <span class="px-4">Login</span>
+            <% end %>
           </li>
         <% end %>
       </ul>
