my bookings and avatar change

--- a/app/views/alibyes/show.html.erb
+++ b/app/views/alibyes/show.html.erb
@@ -11,4 +11,5 @@
 
   <% end %>
   <%= link_to "Back to list", alibyes_path, class: "btn btn-orange" %>
+  <%= link_to "Book your alibye", new_alibye_booking_path(@alibye), class: "btn btn-orange" %>
 </div>
