--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -13,27 +13,39 @@
 }
 
 .card-alibye{
-  overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 
-  &:h3 {
-    font-size: 20px;
+  h3 {
+    font-size: 28px;
     font-weight: bold;
     margin: 0;
     color: $gray;
   }
 
-  &:p {
+  p {
     font-size: 16px;
-    opacity: .7;
-    margin: 0;
-    color: $light-gray;
+    font-weight: lighter;
+    opacity: 0.8;
+    color: $gray;
   }
+
+  .card-alibye-infos{
+    padding: 1rem;
+  }
+
+  .btn-blue{
+    margin: 1rem auto;
+    display: block;
+    width: max-content;
+  }
+
 }
 
 .card-alibye-image{
-  height: 200px;
-  width: 100%;
-  object-fit: cover;
+  width: auto;
+
+  img{
+    width: 100%;
+  }
 }
