--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,35 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "banner";
+
+.banner{
+  h2{
+    color: $blue;
+    font-size: 60px;
+    font-weight: bold;
+    padding-left: 50px;
+  }
+
+  span{
+    color: $gray;
+  }
+}
+
+.content{
+  margin: 15px 0;
+}
+
+#btn-add{
+  display: block;
+  margin-left: auto;
+  margin-right: 0;
+  width: 250px;
+}
+
+h3{
+  margin-top: 3rem;
+  color: $gray;
+  font-size: 45px;
+  font-weight: bold;
+  padding-left: 25px;
+}
