--- a/app/views/alibyes/index.html.erb
+++ b/app/views/alibyes/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<div class="banner" style="background-image: url(/assets/dab.jpg);">
+<div class="banner" style="background-image: url(<%= image_path "dab.jpg" %>);">
     <h2>Alibye <span>is freedom</strong></h2>
 </div>
 <div class="content">
