fixed show image

--- a/app/views/alibyes/show.html.erb
+++ b/app/views/alibyes/show.html.erb
@@ -3,7 +3,7 @@
     <p center>This alibye is not available.</p>
   <% else %>
   <div class="card-trip">
-  <img src="/assets/banner.jpg"/>
+  <img src=<%= image_path "banner.jpg" %>/>
   <div class="card-trip-infos">
     <div>
     <h3><%= @alibye.title %></h3>
