fixed form for booking, added references between booking and alibye

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= simple_form_for(@booking) do |f| %>
+  <%= simple_form_for([@alibye, @booking]) do |f| %>
     <%= f.input :start_hour %>
     <%= f.input :end_hour %>
     <%= f.submit "Add bookings", :class => "btn btn-blue" %>
