--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,13 +13,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <!--li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
+          <!--li class="nav-item active"-->
+          <li class="nav-item">
+            <%= link_to "Home", root_path, class: "nav-link me-3" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li-->
-          <li class="nav-item dropdown">
+            <%= link_to "Alibyes", alibyes_path, class: "nav-link me-3" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "My bookings", bookings_path, class: "nav-link me-3" %>
+          </li>
+          <li class="nav-item dropdown ps-3">
             <%= image_tag "avatarnew.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%#= link_to "Action", "#", class: "dropdown-item" %>
