--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,14 +1,26 @@
-<div class="text-center padded">
-  <h1>My upcoming Alibyes</h1>
+<div class="card text-center">
+  <div class="card-header">
+  </div>
+  <div class="card-body">
+    <h4 class="card-title">My booked Alibyes</h4>
 </div>
 
-  <div class="row">
     <% @bookings.each do |booking| %>
-      <div class="co-12 col-sm-6 col-md-4 mb-3">
-        <%= link_to bookings_path(@bookings), class:"text-decoration-none" do %>
-            <%= @alibye.title %>
+      <% if booking.checkin_on > Hour.now %>
+        <% if booking.status == "Pending host validation" %>
+        <li class="dashboard">
+        <%= cl_image_tag(booking.bed.photo.path, width: 400, height: 300, crop: :fill, class: "pdt-image hidden-xs" ) %>
+          <div class='product-body'>
+            <h2><%= booking.bed.title %></h2>
+            <p>City: <strong><%= booking.bed.city %></strong></p>
+            <p>Address: <strong><%= booking.bed.address %></strong></p>
+            <p>Total price: <strong><%= booking.value %> €</strong></p>
           </div>
+          <div>
+            <ul class="list-unstyled hidden-sm hidden-xs padded">
+              <li><strong>Wait for your host to confirm. Stay tuned !</strong></li>
+              <li class="text-right"><%= link_to "Delete this booking", booking_path(booking), method: :delete, class:"btn btn-default", data: {confirm: "Are you sure"} %></li>
+            </ul>
+          </div>
+        </li>
         <% end %>
-      </div>
-    <% end %>
-  </div>
