--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon py-4 px-5">
   <div class="container-fluid">
     <%= link_to root_path, class:"link" do %>
-      <div class="d-flex justify-content-start align-items-center">
+      <div class="d-flex justify-content-start align-items-center py-4 px-5">
         <div id="logo"><i class="fa-solid fa-user-secret "></i></div>
         <div id="logo-text", class="mx-3">ALIBYE</div>
       </div>
