--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,26 +1,20 @@
-<div class="card text-center">
-  <div class="card-header">
-  </div>
-  <div class="card-body">
-    <h4 class="card-title">My booked Alibyes</h4>
-</div>
 
-    <% @bookings.each do |booking| %>
-      <% if booking.checkin_on > Hour.now %>
-        <% if booking.status == "Pending host validation" %>
-        <li class="dashboard">
-        <%= cl_image_tag(booking.bed.photo.path, width: 400, height: 300, crop: :fill, class: "pdt-image hidden-xs" ) %>
+  <div class="card-body">
+    <h1 class="card-title">My booked Alibyes</h1>
+</div>
+     <% @bookings.each do |booking| %>
+     <br>
           <div class='product-body'>
-            <h2><%= booking.bed.title %></h2>
-            <p>City: <strong><%= booking.bed.city %></strong></p>
-            <p>Address: <strong><%= booking.bed.address %></strong></p>
-            <p>Total price: <strong><%= booking.value %> €</strong></p>
+            <h2><%= booking.alibye.title %></h2>
+            <%# <p>Alibye Title: <strong><%= booking.alibye.title %></strong></p>
+            <p>Description: <strong><%= booking.alibye.description %></strong></p>
+            <p>Total price: <strong><%= booking.total_price %> €</strong></p>
           </div>
           <div>
             <ul class="list-unstyled hidden-sm hidden-xs padded">
-              <li><strong>Wait for your host to confirm. Stay tuned !</strong></li>
+              <li><strong></strong></li>
               <li class="text-right"><%= link_to "Delete this booking", booking_path(booking), method: :delete, class:"btn btn-default", data: {confirm: "Are you sure"} %></li>
             </ul>
           </div>
         </li>
-        <% end %>
+     <% end %>
