--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,51 +1,68 @@
-.flexbox {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+
+  @media(max-width: 992px) {
+      grid-template-columns: 1fr 1fr;
+  }
+
+  @media(max-width: 768px) {
+      grid-template-columns: 1fr;
+  }
 }
 
-.item {
-  flex-grow: 1;
+.card-item{
   margin: 20px 20px;
-  width: 300px;
-}
-
-.card-alibye{
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-
-  h3 {
-    font-size: 28px;
-    font-weight: bold;
-    margin: 0;
-    color: $gray;
-  }
-
-  p {
-    font-size: 16px;
-    font-weight: lighter;
-    opacity: 0.8;
-    color: $gray;
-  }
-
-  .card-alibye-infos{
-    padding: 1rem;
+  border-radius: 18px;
+  height: 450px;
   }
 
   .btn-blue{
     margin: 1rem auto;
     display: block;
     width: max-content;
-  }
-
 }
 
-.card-alibye-image{
+.card-image{
   width: auto;
 
   img{
     width: 100%;
+    padding: 20px 15px;
+    border-radius: 28px;
   }
+}
+
+.card-infos{
+  display: grid;
+  grid-template-rows: 0.5fr 0.5fr 0.5fr;
+  align-items: center;
+}
+
+#title {
+  min-height: 50px;
+  padding: 0 25px;
+  font-size: 28px;
+  font-weight: bold;
+  color: $gray;
+  text-align: left;
+  margin-top: 0;
+  }
+
+#price {
+  min-height: 50px;
+  padding: 0 25px;
+  font-size: 20px;
+  font-weight: lighter;
+  opacity: 0.8;
+  color: $gray;
+  text-align: left;
+}
+
+.card-button{
+  min-height: 50px;
+  vertical-align: bottom;
 }
