Improved the footer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,13 +3,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 250px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: $blue;
 }
 .footer-links {
   display: flex;
-  align-items: center;
 }
 .footer-links a {
   color: black;
@@ -23,4 +22,11 @@
 }
 .footer .fa-heart {
   color: #D23333;
+}
+.footer-third {
+  width: 40%;
+}
+
+.gray-text {
+  color: $gray;
 }
