--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,23 +1,17 @@
-<div class="footer d-flex justify-content-between align-items-center py-5 px-4 mt-5">
-  <div>
+<div class="footer d-flex justify-content-between align-items-center p-5 mt-5">
+  <div class="p-5 footer-third">
     <div class="d-flex justify-content-start align-items-center">
       <div id="logo"><i class="fa-solid fa-user-secret "></i></div>
-      <div id="logo-text", class="mx-3">Alibye</div>
+      <div id="logo-text", class="mx-3 logo-text">Alibye</div>
     </div>
-    <p> Trust us, we have built our reputation by using the services ourselves.</p>
+    <p class="mt-3 gray-text"> Trust us, we have built our reputation by using the services ourselves.</p>
   </div>
-  <div class="footer-links">
-    <i class="fa-duotone fa-jedi fa-beat-fade fa-2xs"></i>
+  <div class="d-flex justify-content-end footer-links footer-third p-5">
     <a href="#"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
-  <div class="footer-copyright">
-    <i class="fa-regular fa-copyright"></i><p>All rights reserved to the jedi alliance</p>
 
-  </div>
-  <div class="footer-links">
-  </div>
 </div>
