Added cards to the home, fixed small stuff with the banner and improved the cards spacings (not finished)

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -17,7 +17,10 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 18px;
-  height: 450px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   .btn-blue{
     margin: 1rem auto;
@@ -38,7 +41,7 @@
 
 .card-infos{
   display: grid;
-  grid-template-rows: 0.5fr 0.5fr 0.5fr;
+  grid-template-rows: 0.5fr 0.5fr;
   align-items: center;
 }
 
@@ -53,13 +56,14 @@
   }
 
 #price {
-  min-height: 50px;
+  min-height: 40px;
   padding: 0 25px;
   font-size: 20px;
   font-weight: lighter;
   opacity: 0.8;
   color: $gray;
   text-align: left;
+  margin: 0;
 }
 
 .card-button{
