--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,6 +2,6 @@
   <div class="container">
     <h1>In need of <strong>an excuse</strong> to escape awkward moments?</h1>
     <p>No more waisting time. Break free from societal duties.</p>
-    <%= link_to "Book your alibye", alibyes_path , class: "btn btn-blue" %>
+    <%= link_to "Check our alibyes", alibyes_path , class: "btn btn-blue" %>
   </div>
 </div>
