--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,7 @@
   background-size: cover;
   background-position: center;
   padding: 200px 0;
+  margin-bottom: 50px;
 }
 
 .banner h1 {
@@ -10,7 +11,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 50px;
   font-weight: bold;
-  padding: 15px 25px
+  padding: 15px 0px;
 }
 
 .banner p {
