--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,23 @@
 <div>
   <%= render partial: "/shared/banner" %>
+  <div class="cards container">
+    <% Alibye.all.sample(3).each do |alibye| %>
+      <div class="card-item">
+        <div>
+          <div class="card-image">
+            <%= image_tag "jump.jpg"%>
+          </div>
+          <div class="card-infos">
+            <div class="card-title">
+              <h3 id="title"><%= alibye.title %></h3>
+            </div>
+            <div class="card-price">
+              <p id="price"><%= alibye.price_per_hour%>€/hour</p>
+            </div>
+          </div>
+        </div>
+        <%= link_to "Check this Alibye", alibye_path(alibye), class: "btn-blue" %>
+      </div>
+    <% end %>
+  </div>
 </div>
