--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer d-flex justify-content-between align-items-center p-5 mt-5">
+<div class="footer d-flex justify-content-between align-items-center p-5">
   <div class="p-5 footer-third">
     <div class="d-flex justify-content-start align-items-center">
       <div id="logo"><i class="fa-solid fa-user-secret "></i></div>
