cloudinary and active storage installed

--- a/app/views/alibyes/_form.html.erb
+++ b/app/views/alibyes/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for(alibye) do |f| %>
   <%= f.input :title, placeholder:'test' %>
   <%= f.input :category, :collection => Alibye::CATEGORIES %>
+  <%= f.input :photo, as: :file %>
   <%= f.input :description %>
   <%= f.input :price_per_hour %>
   <%= f.submit :class => "btn btn-blue" %>
