--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -3,7 +3,11 @@
     <% @alibyes.each do |alibye| %>
       <div class="card-item">
         <div class="card-image">
-          <%= cl_image_tag alibye.photo.key, crop: :fill %>
+          <% if @alibye.photo.attached? %>
+            <%= cl_image_tag @alibye.photo.key, height: 600, width: 800, crop: :fill %>
+          <% else %>
+            <%= image_tag "jumping.jpg", style: 'height:600px;width:800px;' %>
+          <% end %>
         </div>
         <div class="card-infos">
           <div class="card-title">
