--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -10,6 +10,7 @@ $headings-font-family:   $headers-font;
 $body-bg:                $light-gray;
 $font-size-base:         1rem;
 $padding:                15px 25px;
+$object-fit:             $cover;
 
 // Colors
 $body-color: $gray;
