solved cloudinary error message

--- a/app/views/alibyes/index.html.erb
+++ b/app/views/alibyes/index.html.erb
@@ -19,6 +19,6 @@
       </div>
     </div>
 
-    <%= render partial: "/shared/cards" %>
+    <%= render partial: "/shared/cards", locals: {alibyes: @alibyes} %>
   </div>
 </div>
