--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -1,12 +1,12 @@
 <div class="cards">
-  <% if @alibyes.any? %>
-    <% @alibyes.each do |alibye| %>
+  <% if alibyes.any? %>
+    <% alibyes.each do |alibye| %>
       <div class="card-item">
         <div class="card-image">
-          <% if @alibye.photo.attached? %>
-            <%= cl_image_tag @alibye.photo.key, height: 600, width: 800, crop: :fill %>
+          <% if alibye.photo.attached? %>
+            <%= cl_image_tag alibye.photo.key %>
           <% else %>
-            <%= image_tag "jumping.jpg", style: 'height:600px;width:800px;' %>
+            <%= image_tag "jumping.jpg" %>
           <% end %>
         </div>
         <div class="card-infos">
