--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -18,7 +18,7 @@
               <li class="list-group-item"><p>Total price: <strong><%= booking.total_price %> €</strong></p></li>
             </ul>
             <div class="card-body">
-              <%= link_to "Delete this booking", booking_path(booking), method: :delete, class:"card-link", data: {confirm: "Are you sure"} %>
+              <%= link_to "Delete this booking", booking_path(booking), class:"card-link", data: {turbo_method: :delete, turbo_confirm: 'Are you sure? :('} %>
             </div>
           </div>
         </div>
