--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -2,7 +2,7 @@
   <%= simple_form_for([@alibye, @booking]) do |f| %>
     <%= f.input :start_hour %>
     <%= f.input :end_hour %>
-    <%= f.submit "Add bookings", :class => "btn btn-blue" %>
+    <%= f.submit "Add booking", :class => "btn btn-blue" %>
   <% end %>
   <br>
   <%= link_to "Back to homepage", alibyes_path, class: "btn btn-orange" %>
