--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,12 +2,17 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  object-fit: cover;
+  display: grid;
+  grid-template-columns: 1.7fr 1fr;
+  img{
+    object-fit: cover;
+    object-position: center;
+  }
 }
 
 .card-trip > img {
-  height: 400px;
-  width: 100%;
+  height: 100%;
+  width: 800px;
   object-fit: cover;
 }
 
@@ -24,13 +29,15 @@
   margin: 5px;
 }
 
-
 .card-trip .card-trip-infos {
-  padding: 16px;
+  height: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  position: relative;
+  flex-direction: column;
+  padding-right: 10px;
+
+  .card-trip-pricing{
+    text-align: end;
+  }
 }
 
 .card-trip-infos .card-trip-user {
@@ -38,4 +45,14 @@
   right: 16px;
   top: -20px;
   width: 40px;
+}
+
+.image-contain {
+  object-fit: contain;
+  object-position: center;
+}
+
+.image-cover {
+  object-fit: cover;
+  object-position: right top;
 }
