--- a/app/views/alibyes/index.html.erb
+++ b/app/views/alibyes/index.html.erb
@@ -5,7 +5,13 @@
   <div class="content">
 
     <h3>Discover all our Alibyes</h3>
-    <%= link_to "Create a new Alibye", new_alibye_path, class: "btn btn-blue", id: "btn-add" %>
+      <div>
+    <div class="d-flex justify-content-end">
+        <%= link_to alibyes_path do %>
+          <p class="btn-add align-self-center"><i class="fa-solid fa-circle-plus" style="color: #2176ff;"></i><span class ="align-middle">Create a new Alibye</span></p>
+        <% end %>
+      </div>
+    </div>
     <div class="row justify-content-center">
       <div class="col-sm-8 my-3">
         <%= form_with url: alibyes_path, method: :get, class: "d-flex" do %>
