--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,6 +13,9 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
+            <%= link_to "Home", root_path, class: current_page?(root_path) ? "nav-link me-3 active" : "nav-link me-3" %>
+          </li>
+          <li class="nav-item">
             <%= link_to "Alibyes", alibyes_path, class: current_page?(alibyes_path) ? "nav-link me-3 active" : "nav-link me-3" %>
           </li>
           <li class="nav-item">
@@ -26,7 +29,7 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to new_user_session_path, class: "nav-link btn btn-blue" do %>
+            <%= link_to new_user_session_path, class: "btn btn-blue" do %>
               <span class="px-4">Login</span>
             <% end %>
           </li>
