--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -10,6 +10,13 @@
   }
 }
 
+h3{
+  padding-top: 25px;
+  color: $gray;
+  font-size: 45px;
+  font-weight: bold;
+}
+
 .card-trip > img {
   height: 100%;
   width: 800px;
