--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,9 +1,15 @@
-<div class="container">
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-6 offset-lg-3">
+      <div class="bg-white rounded p-3 shadow">
   <%= simple_form_for([@alibye, @booking]) do |f| %>
     <%= f.input :start_hour %>
     <%= f.input :end_hour %>
-    <%= f.submit "Add booking", :class => "btn btn-blue" %>
+    <%= f.submit "Add bookings", :class => "btn btn-blue" %>
   <% end %>
   <br>
   <%= link_to "Back to homepage", alibyes_path, class: "btn btn-orange" %>
+      </div>
+    </div>
+  </div>
 </div>
