--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
             <%= link_to "Home", root_path, class: current_page?(root_path) ? "nav-link me-3 active" : "nav-link me-3" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Alibyes", alibyes_path, class: current_page?(alibyes_path) ? "nav-link me-3 active" : "nav-link me-3" %>
+            <%= link_to "Alibyes", alibyes_path, class: current_page?(alibyes_path) || params[:page] == "show" ? "nav-link me-3 active" : "nav-link me-3" %>
           </li>
           <li class="nav-item">
             <%= link_to "My bookings", bookings_path, class: current_page?(bookings_path) ? "nav-link me-3 active" : "nav-link me-3" %>
