--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,30 +1,31 @@
-
-<% if @bookings.empty? %>
-  <div class="container">
-    <h3 center> There are no bookings yet! 😥  </h3>
-</div>
-<% else %>
-<br>
-  <div class="text-center"> <h1> All my bookings </h1>
-  <br>
-    <div class="row">
-      <% @bookings.each do |booking| %>
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <%# <img src="..." class="card-img-top" alt="..."> %>
-            <div class="card-body">
-              <h5 class="card-title"><strong><%= booking.alibye.title %></strong></h5>
-              <p class="card-text">Description: <%= booking.alibye.description %></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item"><p>Total price: <strong><%= booking.total_price %> €</strong></p></li>
-            </ul>
-            <div class="card-body">
-              <%= link_to "Delete this booking", booking_path(booking), class:"card-link", data: {turbo_method: :delete, turbo_confirm: 'Really ? 😱'} %>
+<div class="container mx-5">
+  <% if @bookings.empty? %>
+    <div class="container">
+      <h3 center> There are no bookings yet! 😥  </h3>
+  </div>
+  <% else %>
+    <br>
+    <div class="text-center"> <h1> All my bookings </h1>
+    <br>
+      <div class="row">
+        <% @bookings.each do |booking| %>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <%# <img src="..." class="card-img-top" alt="..."> %>
+              <div class="card-body">
+                <h5 class="card-title"><strong><%= booking.alibye.title %></strong></h5>
+                <p class="card-text">Description: <%= booking.alibye.description %></p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><p>Total price: <strong><%= booking.total_price %> €</strong></p></li>
+              </ul>
+              <div class="card-body">
+                <%= link_to "Delete this booking", booking_path(booking), class:"card-link", data: {turbo_method: :delete, turbo_confirm: 'Really ? 😱'} %>
+              </div>
             </div>
           </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
