--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,5 @@
 @import "components/banner";
 @import "components/buttons";
 @import "components/cards";
-@import "pages/show"
+@import "pages/show";
+@import "components/searchbar";
