--- a/app/views/alibyes/index.html.erb
+++ b/app/views/alibyes/index.html.erb
@@ -1,20 +1,22 @@
 <div class="container">
   <div class="banner" style="background-image: url(<%= image_path "dab.jpg" %>);">
-      <h2>Alibye<span>is freedom</strong></h2>
+      <h2>Alibye<span> is freedom</strong></h2>
   </div>
   <div class="content">
-    <div class="row justify-content-center">
-      <div class="col-sm-8 my-3">
-        <%= form_with url: alibyes_path, method: :get, class: "d-flex" do %>
-          <%= text_field_tag :query,
+    <div class="row justify-content-center search-container">
+        <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get">
+            <div class="search-form-control form-group">
+              <%= form_with url: alibyes_path, method: :get, class: "d-flex" do %>
+                <%= text_field_tag :query,
                 params[:query],
                 class: "form-control",
                 placeholder: "Type a keyword"
             %>
-          <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
-        <% end %>
-      </div>
-    </div>
+          <%= submit_tag "Search", name: "", class: "btn btn-primary search-button" %>
+              <% end %>
+            </div>
+          </div>
+        </form>
     <div class ="grid">
       <h3>Discover all our Alibyes</h3>
       <div class="d-flex justify-content-end">
