Fixed logo to all caps

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="p-5 footer-third">
     <div class="d-flex justify-content-start align-items-center">
       <div id="logo"><i class="fa-solid fa-user-secret "></i></div>
-      <div id="logo-text", class="mx-3 logo-text">Alibye</div>
+      <div id="logo-text", class="mx-3 logo-text">ALIBYE</div>
     </div>
     <p class="mt-3 gray-text"> Trust us, we have built our reputation by using the services ourselves.</p>
   </div>
