--- a/app/views/alibyes/index.html.erb
+++ b/app/views/alibyes/index.html.erb
@@ -20,7 +20,7 @@
     <div class ="grid">
       <h3>Discover all our Alibyes</h3>
       <div class="d-flex justify-content-end">
-        <%= link_to alibyes_path do %>
+        <%= link_to new_alibye_path do %>
             <p class="btn-add align-self-center"><i class="fa-solid fa-circle-plus" style="color: #2176ff;"></i><span class ="align-middle">New Alibye</span></p>
         <% end %>
       </div>
