--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,10 @@
   background-position: center;
   padding: 200px 0;
   margin-bottom: 50px;
+
+  p {
+    padding-bottom: 2rem;
+  }
 }
 
 .banner h1 {
