--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path "banner.jpg" %>);">
   <div class="container">
     <h1>In need of <strong>an excuse</strong> to escape awkward moments?</h1>
-    <p>No more waisting time. Break free from societal duties.</p>
+    <p>No more wasting time. Break free from social obligations.</p>
     <%= link_to "Check our alibyes", alibyes_path , class: "btn btn-blue" %>
   </div>
 </div>
